# crawler_shopee_public

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt
config/: config.py
view/: (deprecated)api_v2_get_product_detail.py  api_v2_get_product_url.py  api_v2_get_shop_detail.py  api_v4_get_product_detail.py  api_v4_get_shop_detail.py  check_ip_pool.py  clean_data.sql  get_product_detail.py  get_product_url.py  get_shop_detail.py  utils.py
view/csv/: product_detail.csv  product_id.csv  shop_detail.csv
