[tool.poetry]
name = "crawler-shopee-public"
version = "0.1.0"
description = ""
authors = ["Max <a0025071@gmail.com>"]
readme = "README.md"
packages = [{include = "crawler_shopee_public"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
aiohttp = "^3.8.3"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
google-cloud-bigquery = "^3.4.2"
pandas-gbq = "^0.19.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
